# scraping_theatre

./: .gitignore  CLAUDE.md  LICENSE  PROJECT_STRUCTURE.md  README.md  base_scraper.py  hello.py  main.py  models.py  pyproject.toml  requirements.txt  run_discord_bot.py  run_scraping.py  scrape_single_html.py
.history/: .gitignore_20250214221442  .gitignore_20250214221525
config/: .env.example  discord_requirements.txt
data/: shimotakaido_cinema.csv
doc/: scraping_scripts.md
docs/: DISCORD_BOT_SETUP_GUIDE.md  README_discord_bot.md  README_scraping.md
html/: ポレポレ東中野：オフィシャルサイト.html  ユーロスペース.html  上映スケジュール _ ケイズシネマ.html  上映スケジュール _ 下高井戸シネマ.html  新宿武蔵野館上映スケジュール.html  早稲田松竹 official web site _ 高田馬場の名画座.html
notebook/: test.ipynb
output/: all_theaters_20250707_012526.json  all_theaters_20250707_015635.json  all_theaters_20250707_094634.json  all_theaters_20250707_101033.json  all_theaters_20250707_102137.json  eurospace_20250707_011629.json  eurospace_20250707_014753.json  eurospace_20250707_094343.json  eurospace_20250707_095604.json  eurospace_20250707_095804.json  eurospace_20250707_101021.json  eurospace_20250707_102124.json  ks_cinema_20250707_011614.json  ks_cinema_20250707_014741.json  ks_cinema_20250707_093911.json  ks_cinema_20250707_094317.json  ks_cinema_20250707_094331.json  ks_cinema_20250707_100926.json  ks_cinema_20250707_102029.json  pole_pole_20250707_011621.json  pole_pole_20250707_014747.json  pole_pole_20250707_094337.json  pole_pole_20250707_095444.json  pole_pole_20250707_100931.json  pole_pole_20250707_102035.json  (+19 more)
src/: __init__.py
(+26 files in other folders)
