[project]
name = "scraping-theatre"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "pandas>=2.2.3",
    "requests>=2.31.0",
    "gspread>=5.12.0",
    "oauth2client>=4.1.3",
]
